set dynamoDb as global in core

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,9 +9,12 @@
   "devDependencies": {
     "vitest": "^1.1.1",
     "@types/node": "^20.10.6",
+    "@types/aws-lambda": "^8.10.130",
     "sst": "^2.39.2"
   },
   "dependencies": {
-    "zod": "^3.22.4"
+    "@aws-sdk/client-dynamodb": "^3.484.0",
+    "@aws-sdk/lib-dynamodb": "^3.485.0",
+    "aws-lambda": "^1.0.7"
   }
 }
