--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/lib-dynamodb": "^3.485.0",
     "@types/uuid": "^9.0.7",
     "aws-lambda": "^1.0.7",
+    "stripe": "^14.11.0",
     "uuid": "^9.0.1",
     "valibot": "^0.25.0"
   }
