--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.9",
     "aws-amplify": "^6.0.10",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
@@ -17,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "valibot": "^0.25.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
